--- a/css/main-dist.css
+++ b/css/main-dist.css
@@ -1,1 +1,1 @@
-body,html{width:100%;height:100%;margin:0;padding:0}
+body,html{width:100%;height:100%;margin:0;padding:0}*{font-family:Hack, Courier New, Courier, monospace}
